logs/pysnmp-se.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysnmp'...
Listing './lib/python3.5/site-packages/pysnmp/asn1'...
Compiling './lib/python3.5/site-packages/pysnmp/asn1/base.py'...
***   File "./lib/python3.5/site-packages/pysnmp/asn1/base.py", line 454
    raise KeyError, str(key)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/asn1/encoding'...
Listing './lib/python3.5/site-packages/pysnmp/asn1/encoding/ber'...
Compiling './lib/python3.5/site-packages/pysnmp/asn1/encoding/ber/base.py'...
***   File "./lib/python3.5/site-packages/pysnmp/asn1/encoding/ber/base.py", line 36
    def berEncodeTag(self, (tagClass, tagFormat, tagId) = (None, None, None)):
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/asn1/encoding/ber/univ.py'...
***   File "./lib/python3.5/site-packages/pysnmp/asn1/encoding/ber/univ.py", line 63
    while integer <> -1:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/asn1/oid.py'...
***   File "./lib/python3.5/site-packages/pysnmp/asn1/oid.py", line 91
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/asn1/test_oid.py'...
***   File "./lib/python3.5/site-packages/pysnmp/asn1/test_oid.py", line 49
    assert o[4] == 5L, o[4]
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/asn1/univ.py'...
***   File "./lib/python3.5/site-packages/pysnmp/asn1/univ.py", line 31
    initialValue = 0L
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/compat'...
Listing './lib/python3.5/site-packages/pysnmp/compat/pysnmp1x'...
Compiling './lib/python3.5/site-packages/pysnmp/compat/pysnmp1x/wrapexp.py'...
***   File "./lib/python3.5/site-packages/pysnmp/compat/pysnmp1x/wrapexp.py", line 22
    except pysnmp.mapping.udp.error.BadArgumentError, why:
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/compat/pysnmp2x'...
Compiling './lib/python3.5/site-packages/pysnmp/compat/pysnmp2x/asn1.py'...
***   File "./lib/python3.5/site-packages/pysnmp/compat/pysnmp2x/asn1.py", line 58
    except pysnmp.proto.error.BadArgumentError, why:
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/compat/pysnmp2x/v1.py'...
***   File "./lib/python3.5/site-packages/pysnmp/compat/pysnmp2x/v1.py", line 67
    except pysnmp.proto.error.BadArgumentError, why:
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/compat/pysnmp2x/v2c.py'...
***   File "./lib/python3.5/site-packages/pysnmp/compat/pysnmp2x/v2c.py", line 40
    except v1.BadPDUType, why:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/compat/snmpy'...
Compiling './lib/python3.5/site-packages/pysnmp/compat/snmpy/snmpy.py'...
***   File "./lib/python3.5/site-packages/pysnmp/compat/snmpy/snmpy.py", line 66
    except pysnmp.mapping.udp.error.NoResponseError, why:
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/mapping'...
Listing './lib/python3.5/site-packages/pysnmp/mapping/udp'...
Compiling './lib/python3.5/site-packages/pysnmp/mapping/udp/asynrole.py'...
***   File "./lib/python3.5/site-packages/pysnmp/mapping/udp/asynrole.py", line 15
    def __init__(self, (cbFun, cbCtx)=(None, None), dstAddr=(None, 0), \
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/mapping/udp/role.py'...
***   File "./lib/python3.5/site-packages/pysnmp/mapping/udp/role.py", line 21
    except socket.error, why:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/proto'...
Listing './lib/python3.5/site-packages/pysnmp/proto/api'...
Listing './lib/python3.5/site-packages/pysnmp/proto/api/alpha'...
Compiling './lib/python3.5/site-packages/pysnmp/proto/api/alpha/rfc1155.py'...
***   File "./lib/python3.5/site-packages/pysnmp/proto/api/alpha/rfc1155.py", line 47
    except BadArgumentError, why:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/proto/api/alpha/rfc1157.py'...
***   File "./lib/python3.5/site-packages/pysnmp/proto/api/alpha/rfc1157.py", line 9
    def apiAlphaSetOidVal(self, (oid, val)):
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/proto/api/generic'...
Compiling './lib/python3.5/site-packages/pysnmp/proto/rfc1155.py'...
***   File "./lib/python3.5/site-packages/pysnmp/proto/rfc1155.py", line 98
    constraints.ValueRangeConstraint(0, 4294967295L),
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/proto/rfc1157.py'...
***   File "./lib/python3.5/site-packages/pysnmp/proto/rfc1157.py", line 41
    globalRequestId = 0L
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/proto/rfc1902.py'...
***   File "./lib/python3.5/site-packages/pysnmp/proto/rfc1902.py", line 25
    constraints.ValueRangeConstraint(-2147483648L, 2147483647L),
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp/test'...
Compiling './lib/python3.5/site-packages/pysnmp/test/base.py'...
***   File "./lib/python3.5/site-packages/pysnmp/test/base.py", line 35
    def __agentCbFun(self, tsp, cbCtx, (oStream, srcAddr), (t, v, tb)):
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/test/getset.py'...
***   File "./lib/python3.5/site-packages/pysnmp/test/getset.py", line 9
    assert map(lambda (o, v): o, varBinds) == \
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/test/trap.py'...
***   File "./lib/python3.5/site-packages/pysnmp/test/trap.py", line 25
    assert map(lambda (o, v): o, varBinds) == \
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysnmp/test/walk.py'...
***   File "./lib/python3.5/site-packages/pysnmp/test/walk.py", line 43
    + map(lambda (o, v): o, self.mgrOidVals)
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysnmp_se-3.5.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
